fixed mobile menu vertical gap

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -65,6 +65,11 @@ input[type=checkbox]:checked ~ #menu{
         background-color: white;
         width: 100%;
         height: 100vh;
+        -webkit-margin-before: 0em;
+		-webkit-margin-after: 0em;
+		-webkit-margin-start: 0px;
+		-webkit-margin-end: 0px;
+		-webkit-padding-start: 0px;
     }
     /*Create vertical spacing*/
     li {
